--- a/project.config.json
+++ b/project.config.json
@@ -9,8 +9,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.7.0",
-	"appid": "touristappid",
-	"projectname": "%E5%8F%8D%E9%A6%88",
+	"appid": "wx9add944469d1da31",
+	"projectname": "战旗年会",
 	"condition": {
 		"search": {
 			"current": -1,
