--- a/app.json
+++ b/app.json
@@ -1,9 +1,8 @@
 {
   "debug":"true",
   "pages":[
-    "pages/index/signin",
-    "pages/index/index",
-    "pages/barrage/index"
+    "pages/barrage/index",
+    "pages/index/signin"
   ],
   "window":{
     "backgroundTextStyle":"light",
