--- a/app.json
+++ b/app.json
@@ -6,8 +6,8 @@
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "战旗年会",
-    "navigationBarTextStyle":"black"
+    "navigationBarBackgroundColor": "#151650",
+    "navigationBarTitleText": "战旗直播年终狂欢",
+    "navigationBarTextStyle":"light"
   }
 }
